feat: mudança de estratégia de relacionamento para pergunta - professor implementação do banco supa base, uploud de imagens e mudança de atributos.