@@ -22,7 +22,7 @@ public class ProfessorService {
 
     private final ProfessorRepository professorRepository;
     private final DisciplinaRepository disciplinaRepository;
-    private final PerguntaRepository perguntaRepository; //
+    private final PerguntaRepository perguntaRepository;
 
     public ProfessorService(ProfessorRepository professorRepository,
                             DisciplinaRepository disciplinaRepository,
@@ -32,13 +32,14 @@ public class ProfessorService {
         this.perguntaRepository = perguntaRepository;
     }
 
-    // --- AUTENTICAÇÃO E SENHA ---
+    // --- AUTENTICAÇÃO ---
 
+    @Transactional(readOnly = true)
     public ProfessorResponseDTO autenticar(String email, String senha) {
         Professor professor = professorRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("Usuário ou senha inválidos"));
 
-        // Nota: Em produção, compare hashes (ex: BCrypt)
+        // Comparação de senha (em produção usar BCrypt)
         if (!professor.getSenha().equals(senha)) {
             throw new RuntimeException("Usuário ou senha inválidos");
         }
@@ -51,7 +52,7 @@ public class ProfessorService {
         Professor professor = professorRepository.findByEmail(email)
                 .orElseThrow(() -> new RuntimeException("E-mail não encontrado no sistema."));
 
-        professor.setSenha(novaSenha); // Nota: Em produção, criptografar antes de salvar
+        professor.setSenha(novaSenha);
         professorRepository.save(professor);
     }
 
@@ -60,33 +61,30 @@ public class ProfessorService {
     @Transactional
     public ProfessorResponseDTO salvar(ProfessorRequestDTO dto) {
         if (professorRepository.existsByEmail(dto.getEmail())) {
-            throw new IllegalArgumentException("E-mail já cadastrado.");
-        }
-        if (professorRepository.existsByCodigo(dto.getCodigo())) {
-            throw new IllegalArgumentException("Código de professor já existente.");
+            throw new RuntimeException("E-mail já cadastrado");
         }
 
         Professor professor = new Professor();
-        professor.setCodigo(dto.getCodigo());
         professor.setNome(dto.getNome());
         professor.setEmail(dto.getEmail());
         professor.setSenha(dto.getSenha());
         professor.setPerfilProfessor(dto.getPerfilProfessor());
 
-        if (dto.getDisciplinasIds() != null && !dto.getDisciplinasIds().isEmpty()) {
-            Set<Disciplina> disciplinas = new HashSet<>(disciplinaRepository.findAllById(dto.getDisciplinasIds()));
-            professor.setDisciplinas(disciplinas);
+        if (dto.getDisciplinasIds() != null) {
+            professor.setDisciplinas(new HashSet<>(disciplinaRepository.findAllById(dto.getDisciplinasIds())));
         }
 
         return toDTO(professorRepository.save(professor));
     }
 
+    @Transactional(readOnly = true)
     public List<ProfessorResponseDTO> listarTodos() {
         return professorRepository.findAll().stream()
                 .map(this::toDTO)
                 .collect(Collectors.toList());
     }
 
+    @Transactional(readOnly = true)
     public ProfessorResponseDTO buscarPorId(Long id) {
         return professorRepository.findById(id)
                 .map(this::toDTO)
@@ -98,59 +96,36 @@ public class ProfessorService {
         Professor professor = professorRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
 
-        // 1. Lógica para remover perguntas de disciplinas que o professor abandonou
         if (dto.getDisciplinasIds() != null) {
-            // Pega os IDs das disciplinas que o professor JÁ POSSUI no banco
-            Set<Long> idsDisciplinasAtuais = professor.getDisciplinas().stream()
+            Set<Long> atuais = professor.getDisciplinas().stream()
                     .map(Disciplina::getId)
                     .collect(Collectors.toSet());
 
-            // Pega os IDs que vieram na requisição (novas disciplinas)
-            List<Long> idsNovos = dto.getDisciplinasIds();
+            // Regra: Se a disciplina foi removida, deletamos as perguntas atreladas ao ID do professor e da disciplina
+            atuais.stream()
+                    .filter(oldId -> !dto.getDisciplinasIds().contains(oldId))
+                    .forEach(removidaId -> perguntaRepository.deleteByProfessorIdAndDisciplinaId(professor.getId(), removidaId));
 
-            // Filtra: O que tinha antes e NÃO tem agora = Disciplinas Removidas
-            // CORREÇÃO: Mudamos de 'id' para 'idAntigo' para não conflitar
-            List<Long> disciplinasRemovidas = idsDisciplinasAtuais.stream()
-                    .filter(idAntigo -> !idsNovos.contains(idAntigo))
-                    .toList();
-
-            // Remove do banco as perguntas desse professor vinculadas às disciplinas removidas
-            for (Long disciplinaId : disciplinasRemovidas) {
-                perguntaRepository.deleteByCodigoProfessorAndDisciplinaId(professor.getCodigo(), disciplinaId);
-            }
-
-            // Atualiza a lista de disciplinas do professor
-            Set<Disciplina> novasDisciplinas = new HashSet<>(disciplinaRepository.findAllById(idsNovos));
-            professor.setDisciplinas(novasDisciplinas);
+            professor.setDisciplinas(new HashSet<>(disciplinaRepository.findAllById(dto.getDisciplinasIds())));
         }
 
-        // 2. Atualização dos dados cadastrais
         professor.setNome(dto.getNome());
         professor.setEmail(dto.getEmail());
-        professor.setPerfilProfessor(dto.getPerfilProfessor());
-
-        // Nota: Se alterar o código, as perguntas antigas podem ficar órfãs se não atualizarmos nelas também.
-        // Assumindo que o código é identificador único imutável na regra de negócio, ok.
-        professor.setCodigo(dto.getCodigo());
-
-        if (dto.getSenha() != null && !dto.getSenha().trim().isEmpty()) {
+        if (dto.getSenha() != null && !dto.getSenha().isBlank()) {
             professor.setSenha(dto.getSenha());
         }
+        professor.setPerfilProfessor(dto.getPerfilProfessor());
 
         return toDTO(professorRepository.save(professor));
     }
 
-
-
     @Transactional
     public void excluir(Long id) {
-        Professor professor = professorRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Professor não encontrado"));
-
-        // 1. Remove todas as perguntas atreladas ao código deste professor
-        perguntaRepository.deleteByCodigoProfessor(professor.getCodigo());
-
-        // 2. Remove o professor
+        if (!professorRepository.existsById(id)) {
+            throw new RuntimeException("Professor não encontrado");
+        }
+        // O cascade na entidade cuidará das perguntas, mas a limpeza explícita é mais segura
+        perguntaRepository.deleteByProfessorId(id);
         professorRepository.deleteById(id);
     }
 
@@ -159,16 +134,14 @@ public class ProfessorService {
     private ProfessorResponseDTO toDTO(Professor entity) {
         ProfessorResponseDTO dto = new ProfessorResponseDTO();
         dto.setId(entity.getId());
-        dto.setCodigo(entity.getCodigo());
         dto.setNome(entity.getNome());
         dto.setEmail(entity.getEmail());
         dto.setPerfilProfessor(entity.getPerfilProfessor());
 
         if (entity.getDisciplinas() != null) {
-            List<DisciplinaSimplesDTO> disciplinasDTO = entity.getDisciplinas().stream()
+            dto.setDisciplinas(entity.getDisciplinas().stream()
                     .map(d -> new DisciplinaSimplesDTO(d.getId(), d.getNome(), d.getCor()))
-                    .collect(Collectors.toList());
-            dto.setDisciplinas(disciplinasDTO);
+                    .collect(Collectors.toList()));
         }
         return dto;
     }
